--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       font-family: Arial, sans-serif;
       padding: 30px;
-      background-color: #f2f2f2;
+      background-color: #ffffff;;
     }
 
     select {
