--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     }
   </style>
 </head>
-<body>  
+<body> 
+  <h5>Lista de Equipamentos de Fiscalização Eletrônica </h5>  
   <select onchange="abrirEmNovaAba(this)">   
     <option value="" disabled selected>Selecione um arquivo</option>
     <option value="https://www.google.com">Google</option>
