--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
     <br><br>
   
-   <h5>Lista de Equipamentos POr Localidade</h5>
+   <h5>Lista de Equipamentos Por Localidade</h5>
     <select onchange="abrirEmNovaAba(this)">   
-      <option value="https://www.example.com">Relação de Equipamentos Por Localidade</option>
+      <option value="https://www.example.com">Relação de Equipamentos</option>
     </select>
 
   <script>
