--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   
    <h5>Lista de Equipamentos Por Localidade</h5>
     <select onchange="abrirEmNovaAba(this)">   
-      <option value="https://www.example.com">Relação de Equipamentos</option>
+      <option value="" disabled selected>Selecione um arquivo</option>
+      <option value="https://www.google.com">Google</option>
     </select>
 
   <script>
