--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       font-size: 16px;
       border-radius: 2px;
       border: 1px solid #ccc;
-      background-color: white;      
+      background-color: blue;      
       cursor: pointer;
       appearance: none;
       -webkit-appearance: none;
