--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     select {
       padding: 10px 15px;
       font-size: 16px;
-      border-radius: 2px;
-      border: 1px solid #ccc;
-      background-color: blue;      
+      color: #ffffff;
+      border-radius: 3px;
+      border: 1px solid #cccccc00;
+      background-color: rgb(0, 140, 255);      
       cursor: pointer;
       appearance: none;
       -webkit-appearance: none;
@@ -73,5 +74,3 @@
 
 </body>
 </html>
-
-
