--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
     select {
       padding: 10px 15px;
       font-size: 16px;
-      color: #ffffff;
+      color: #ffffff; /* texto branco no botão fechado */
       border-radius: 3px;
       border: 1px solid #cccccc00;
-      background-color: rgb(0, 140, 255);      
+      background-color: rgb(0, 140, 255); /* fundo azul */
       cursor: pointer;
       appearance: none;
       -webkit-appearance: none;
       -moz-appearance: none;
     }
 
+    select option {
+      color: #000000; /* opções com texto preto */
+      background-color: #ffffff; /* fundo branco nas opções */
+    }
+
     select:focus {
-      outline: none;
-      border-color: #5c9ded;     
+      outline: none;         
     }
 
     .info-text {
