--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
    <h5>Lista de Equipamentos Por Localidade</h5>
     <select onchange="abrirEmNovaAba(this)">   
       <option value="" disabled selected>Selecione um arquivo</option>
-      <option value="https://www.google.com">Google</option>
+      <option value="http://smttaju.com.br/images/pdf/equipamentos_de_fiscalizacao_eletronica_smtt_aracaju.pdf">Equipamentos de Fiscalização Eletrônica</option>
     </select>
 
   <script>
