--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     
     <select onchange="abrirEmNovaAba(this)">   
       <option value="" disabled selected>Selecione um arquivo</option>
-      <option value="https://www.google.com">Google</option>
-      <option value="https://www.wikipedia.org">Wikipedia</option>
-      <option value="https://www.github.com">GitHub</option>
+      <option value=""></option>
+      <option value=""></option>
+      <option value=""></option>
     </select>
 
     <br><br>
