--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
     }
 
     select {
-      padding: 10px 15px;
-      font-size: 16px;
-      color: #ffffff; /* texto branco no botão fechado */
-      border-radius: 3px;
-      border: 1px solid #cccccc00;
-      background-color: rgb(0, 140, 255); /* fundo azul */
-      cursor: pointer;
-      appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-    }
+    width: 220px; 
+    padding: 10px 15px;
+    font-size: 16px;
+    color: #ffffff;
+    border-radius: 3px;
+    border: 1px solid #cccccc00;
+    background-color: rgb(0, 140, 255);
+    cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
     select option {
       color: #000000; /* opções com texto preto */
