--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     <h5>Lista de Equipamentos de Fiscalização Eletrônica</h5>
 
     <!-- Accordion para anos -->
+  <button class="accordion">2022</button>
+    <div class="panel">
+      <ul>
+        <li>Equipamento I</li>
+        <li>Equipamento II</li>
+        <li>Equipamento III</li>
+      </ul>
+    </div>
+  
     <button class="accordion">2023</button>
     <div class="panel">
       <ul>
