--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <button class="accordion">2022</button>
     <div class="panel">
       <ul>
-        <a href="http://smttaju.com.br/images/Medidores/2022/teste.pdf"  target="_blank">Equipamento I</a>
+        <a href=""  target="_blank">Equipamento I</a>
         <li>Equipamento II</li>
         <li>Equipamento III</li>
       </ul>
