--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- Accordion para o arquivo PDF -->
     <button class="accordion">Equipamentos de Fiscalização Eletrônica</button>
     <div class="panel">
-      <a href="http://smttaju.com.br/images/pdf/equipamentos_de_fiscalizacao_eletronica_smtt_aracaju.pdf" target="_blank">Clique aqui para acessar o PDF</a>
+      <a href="http://smttaju.com.br/images/Medidores/Equipamentos/equipamentos de fiscalizao eletrnica smtt aracaju.pdf" target="_blank">Clique aqui para acessar o PDF</a>
     </div>
 
   <script>
