--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       background-color: #ffffff;
     }
 
+    p {
+      text-align: justify;
+    }
+
     .accordion {
       background-color: rgb(0, 120, 220);
       color: white;
