--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Equipamentos de Fiscalização</title>
 
-  <!-- Font Awesome para ícones -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css"/>
+  <!-- Lucide Icons -->
+  <script src="https://unpkg.com/lucide@latest"></script>
 
   <style>
     body {
@@ -86,7 +86,8 @@
 
     .pdf-icon {
       color: #d32f2f;
-      font-size: 18px;
+      width: 18px;
+      height: 18px;
     }
 
     li a:hover .pdf-icon {
@@ -97,48 +98,46 @@
 <body>
 
   <div class="info-text">
-    <p>A lista a seguir apresenta equipamentos utilizados na fiscalização eletrônica de trânsito da cidade. Esses dispositivos desempenham um papel crucial no monitoramento e na aplicação das normas de trânsito, visando garantir a segurança, reduzir infrações e melhorar a mobilidade urbana.</p>
-
-    <p>De acordo com o <strong>Código de Trânsito Brasileiro (CTB)</strong>, em especial o artigo 280, as infrações de trânsito podem ser constatadas por meios eletrônicos. Além disso, a <strong>Resolução 371/2011 do CONTRAN</strong> regula o uso de radares, câmeras e outros dispositivos de fiscalização eletrônica.</p>
-
-    <p>Portanto, a utilização de tais equipamentos segue uma regulamentação rigorosa que visa assegurar a legalidade e a eficácia na fiscalização de trânsito.</p>
+    <p>A lista a seguir apresenta equipamentos utilizados na fiscalização eletrônica de trânsito da cidade...</p>
+    <p>De acordo com o <strong>Código de Trânsito Brasileiro (CTB)</strong>...</p>
+    <p>Portanto, a utilização de tais equipamentos segue uma regulamentação rigorosa...</p>
   </div>
 <!--
   <h5>Lista de Equipamentos de Fiscalização Eletrônica</h5>
 
-  <button class="accordion">2022 <i class="fa-solid fa-chevron-right arrow"></i></button>
+  <button class="accordion">2022 <i data-lucide="chevron-right" class="arrow"></i></button>
   <div class="panel">
     <ul>
-      <li><a href="#"><span>Equipamento I</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento II</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento III</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento I</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento II</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento III</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
     </ul>
   </div>
 
-  <button class="accordion">2023 <i class="fa-solid fa-chevron-right arrow"></i></button>
+  <button class="accordion">2023 <i data-lucide="chevron-right" class="arrow"></i></button>
   <div class="panel">
     <ul>
-      <li><a href="#"><span>Equipamento A</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento B</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento C</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento A</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento B</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento C</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
     </ul>
   </div>
 
-  <button class="accordion">2024 <i class="fa-solid fa-chevron-right arrow"></i></button>
+  <button class="accordion">2024 <i data-lucide="chevron-right" class="arrow"></i></button>
   <div class="panel">
     <ul>
-      <li><a href="#"><span>Equipamento X</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento Y</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento Z</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento X</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento Y</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento Z</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
     </ul>
   </div>
 
-  <button class="accordion">2025 <i class="fa-solid fa-chevron-right arrow"></i></button>
+  <button class="accordion">2025 <i data-lucide="chevron-right" class="arrow"></i></button>
   <div class="panel">
     <ul>
-      <li><a href="#"><span>Equipamento 1</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento 2</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
-      <li><a href="#"><span>Equipamento 3</span><i class="fa-solid fa-file-pdf pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento 1</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento 2</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
+      <li><a href="#"><span>Equipamento 3</span><i data-lucide="file-text" class="pdf-icon"></i></a></li>
     </ul>
   </div>
 
@@ -146,13 +145,13 @@
 -->
   <h5>Lista de Equipamentos Por Localidade</h5>
 
-  <button class="accordion">Equipamentos de Fiscalização Eletrônica <i class="fa-solid fa-chevron-right arrow"></i></button>
+  <button class="accordion">Equipamentos de Fiscalização Eletrônica <i data-lucide="chevron-right" class="arrow"></i></button>
   <div class="panel">
     <ul>
       <li>
         <a href="http://smttaju.com.br/images/Medidores/Equipamentos/equipamentos de fiscalizao eletrnica smtt aracaju.pdf" target="_blank">
           <span>Lista completa em PDF</span>
-          <i class="fa-solid fa-file-pdf pdf-icon"></i>
+          <i data-lucide="file-text" class="pdf-icon"></i>
         </a>
       </li>
     </ul>
@@ -162,12 +161,15 @@
     const acc = document.getElementsByClassName("accordion");
     for (let i = 0; i < acc.length; i++) {
       acc[i].addEventListener("click", function (e) {
-        if (e.target.closest("a")) return; // Evita conflito ao clicar no link
+        if (e.target.closest("a")) return;
         this.classList.toggle("active");
         const panel = this.nextElementSibling;
         panel.style.display = (panel.style.display === "block") ? "none" : "block";
       });
     }
+
+    // Ativa os ícones do Lucide
+    lucide.createIcons();
   </script>
 
 </body>
